# whisper-local

./: .gitignore  CLAUDE.md  LICENSE  README.md  config.py  convert_format.py  pyproject.toml  requirements.txt  run.py  setup.py  transcribe_diarize.py
