[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "whisper-diarization-cli"
version = "1.0.0"
description = "CLI tool for audio transcription and speaker diarization using Whisper and pyannote"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Audio Processing CLI"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10", 
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "openai-whisper",
    "pyannote.audio==3.1",
    "soundfile",
    "faiss-cpu",
    "huggingface-hub",
    "toml",
    "numpy<2.0.0",
    "pandas",
]

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "pytest",
]

[project.scripts]
transcribe-diarize = "transcribe_diarize:main"

[project.urls]
Homepage = "https://github.com/your-username/whisper-diarization-cli"
Repository = "https://github.com/your-username/whisper-diarization-cli"

[tool.setuptools]
py-modules = ["transcribe_diarize", "config"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.ruff]
line-length = 88
target-version = "py39"
select = ["E", "F", "W", "C90", "I", "N", "UP", "YTT", "S", "BLE", "FBT", "B", "A", "COM", "C4", "DTZ", "T10", "EM", "EXE", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SIM", "TID", "TCH", "ARG", "PTH", "ERA", "PGH", "PL", "TRY", "NPY", "RUF"]
ignore = ["S101", "S603", "S607"]